Ensure signing out deletes bookmarks only if full wipe is requested

Due to a bug in https://codereview.chromium.org/2966763003/, bookmarks
were being deleted when a non-managed user signed out, in which case
only Google service worker caches should have been deleted.

This CL fixes the problem and adds a unittest for bookmark deletion
in both cases.

Note that making bookmarks deletion testable required moving it into
ProfileDataRemover where the rest of the deletion occurs. However,
it happens on the same thread; and in any case, this is exactly the
part that is tested.

Bug: 747155
Change-Id: I857e52cd4835d95e712e205c8c436adec73d1789
Reviewed-on: https://chromium-review.googlesource.com/581497
Commit-Queue: Martin Šrámek <msramek@chromium.org>
Reviewed-by: Boris Sazonov <bsazonov@chromium.org>
Cr-Commit-Position: refs/heads/master@{#489343}
Former-commit-id: d2fe8ebb71e77a5b05e3fe9c0ca8711fe4e51ab1