chrome/browser/android/signin/signin_manager_android.cc
@@ -54,6 +54,12 @@ using bookmarks::BookmarkModel;
 
 namespace {
 
+// Clears the information about the last signed-in user from |profile|.
+void ClearLastSignedInUserForProfile(Profile* profile) {
+  profile->GetPrefs()->ClearPref(prefs::kGoogleServicesLastAccountId);
+  profile->GetPrefs()->ClearPref(prefs::kGoogleServicesLastUsername);
+}
+
 // A BrowsingDataRemover::Observer that clears Profile data and then invokes
 // a callback and deletes itself. It can be configured to delete all data
 // (for enterprise users) or only Google's service workers (for all users).
@@ -62,7 +68,9 @@ class ProfileDataRemover : public content::BrowsingDataRemover::Observer {
   ProfileDataRemover(Profile* profile,
                      bool all_data,
                      const base::Closure& callback)
-      : callback_(callback),
+      : profile_(profile),
+        all_data_(all_data),
+        callback_(callback),
         origin_runner_(base::ThreadTaskRunnerHandle::Get()),
         remover_(content::BrowserContext::GetBrowsingDataRemover(profile)) {
     remover_->AddObserver(this);
@@ -96,11 +104,25 @@ class ProfileDataRemover : public content::BrowsingDataRemover::Observer {
 
   void OnBrowsingDataRemoverDone() override {
     remover_->RemoveObserver(this);
+
+    if (all_data_) {
+      BookmarkModel* model =
+          BookmarkModelFactory::GetForBrowserContext(profile_);
+      model->RemoveAllUserBookmarks();
+
+      // All the Profile data has been wiped. Clear the last signed in username
+      // as well, so that the next signin doesn't trigger the account
+      // change dialog.
+      ClearLastSignedInUserForProfile(profile_);
+    }
+
     origin_runner_->PostTask(FROM_HERE, callback_);
     origin_runner_->DeleteSoon(FROM_HERE, this);
   }
 
  private:
+  Profile* profile_;
+  bool all_data_;
   base::Closure callback_;
   scoped_refptr<base::SingleThreadTaskRunner> origin_runner_;
   content::BrowsingDataRemover* remover_;
@@ -268,13 +290,6 @@ void SigninManagerAndroid::OnPolicyFetchDone(bool success) {
 
 void SigninManagerAndroid::OnBrowsingDataRemoverDone(
     const base::android::ScopedJavaGlobalRef<jobject>& callback) {
-  BookmarkModel* model = BookmarkModelFactory::GetForBrowserContext(profile_);
-  model->RemoveAllUserBookmarks();
-
-  // All the Profile data has been wiped. Clear the last signed in username as
-  // well, so that the next signin doesn't trigger the acount change dialog.
-  ClearLastSignedInUser();
-
   Java_SigninManager_onProfileDataWiped(base::android::AttachCurrentThread(),
                                         java_signin_manager_, callback);
 }
@@ -282,12 +297,7 @@ void SigninManagerAndroid::OnBrowsingDataRemoverDone(
 void SigninManagerAndroid::ClearLastSignedInUser(
     JNIEnv* env,
     const JavaParamRef<jobject>& obj) {
-  ClearLastSignedInUser();
-}
-
-void SigninManagerAndroid::ClearLastSignedInUser() {
-  profile_->GetPrefs()->ClearPref(prefs::kGoogleServicesLastAccountId);
-  profile_->GetPrefs()->ClearPref(prefs::kGoogleServicesLastUsername);
+  ClearLastSignedInUserForProfile(profile_);
 }
 
 void SigninManagerAndroid::LogInSignedInUser(JNIEnv* env,
